--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ ENABLE_SEMANTIC_SEARCH=true
 
 # Debug mode
 DEBUG=false
+
+# Friendly fire, allow bot to respond to other bots messages (true/false). (will only work when mentioned to prevent infinite bot loops)
+FRIENDLY_FIRE=false
